manifests/server/server-rollout.yaml
# Rollout
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: server-dep
  namespace: project
spec:
  replicas: 4
  selector:
    matchLabels:
      app: server
  strategy:
    canary:
      steps:
      - setWeight: 25
      - pause:
          duration: 30s
      - setWeight: 50
      - pause:
          duration: 30s
      - analysis:
          templates:
          - templateName: cpu-usage-rate
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: PROJECT_SERVER
          imagePullPolicy: Always
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 10
            httpGet:
              path: /healthz
              port: 3001
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3001
          resources:
            requests:
              memory: '64Mi'
              cpu: '250m'
            limits:
              memory: '516Mi'
              cpu: '500m'

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: server-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
